--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>Welcome to My Awesome DevOps Project!</h1>
         <p>This is a simple web page deployed on an AWS EC2 instance.</p>
         <p>We are learning Jenkins and CI/CD!</p>
+        <p>GOD is XYZ!</p>
         <div class="version">Version: 1.0.0</div>
     </div>
 </body>
